--- a/08_events/two.html
+++ b/08_events/two.html
@@ -22,7 +22,7 @@
 
     document.querySelector('#stop').addEventListener('click',function(){
         clearTimeout(changeMe)
-        console.log("stop");
+        console.log();
         
     })
 
